--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.9.1",
@@ -36,6 +37,7 @@
     "tailwindcss": "^4.1.14",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.12"
+    "vite": "^7.1.12",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
